# WPEBackend-direct

./: .gitignore  README.md  main.cpp  meson.build
backend/: Backend.cpp  Backend.h  NativeSurface.cpp  NativeSurface.h  Renderer.cpp  Renderer.h  RendererBackend.cpp  RendererBackend.h  RendererHost.cpp  RendererHost.h  RendererTarget.cpp  RendererTarget.h  ipc.cpp  ipc.h  meson.build  wpebackend-direct.cpp  wpebackend-direct.h
backend/application-side/: RendererHost.cpp  RendererHost.h  RendererHostClient.cpp  RendererHostClient.h  ViewBackend.cpp  ViewBackend.h
backend/common/: ipc-messages.h  ipc.cpp  ipc.h  wpebackend-direct.cpp
backend/wpewebprocess-side/: NativeSurface.cpp  RendererBackendEGL.cpp  RendererBackendEGL.h  RendererBackendEGLTarget.cpp  RendererBackendEGLTarget.h
scripts/: Dockerfile  webkit
